--- a/index.html
+++ b/index.html
@@ -2,173 +2,171 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Zalo 2</title>
 
-  <!-- Icon & iOS -->
+  <!-- Icons -->
   <link rel="icon" href="https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png" />
   <link rel="apple-touch-icon" href="https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png" />
-  <meta name="apple-mobile-web-app-title" content="Zalo 2" />
+
+  <!-- PWA / Fullscreen settings -->
+  <!-- iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
+  <!-- black-translucent makes status area overlay; when added to home screen it gives a cleaner look.
+       If you prefer a solid bar color, use "default" or "black". -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Zalo 2" />
+  <!-- Android / Chrome -->
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="theme-color" content="#ffffff" />
 
   <style>
     :root{
-      --bg:#ffffff;
-      --primary:#0a84ff; /* màu xanh nút */
-      --muted:#f2f5f8;
-      --text:#0b3b8a;
-      --soft:#8b98a9;
-      --radius:28px;
+      --bg:#f7f9fb;
+      --card:#ffffff;
+      --primary:#0a84ff;
+      --muted:#6b7785;
     }
-    html,body{height:100%;margin:0;font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial; background:var(--bg); color:#111}
-    .container{min-height:100%;display:flex;flex-direction:column;align-items:center;padding:28px 20px;box-sizing:border-box}
-    .lang{position:fixed;right:18px;top:18px;background:#fff;border-radius:20px;padding:6px 10px;border:1px solid rgba(0,0,0,0.06);font-size:14px;color:#222}
-    .logo{margin-top:30px;font-weight:700;color:var(--primary);font-size:54px;letter-spacing:1px;font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial}
-    .hero{width:100%;max-width:460px;margin-top:18px;display:flex;flex-direction:column;align-items:center}
-    /* illustration circle */
-    .illu{width:280px;height:180px;border-radius:12px;display:flex;align-items:center;justify-content:center}
-    .illu-inner{width:220px;height:120px;border-radius:12px;background:linear-gradient(180deg,#ffffff,#fbfdff);display:flex;align-items:center;justify-content:center;box-shadow:0 6px 20px rgba(9,30,66,0.04);border:1px dashed rgba(10,20,50,0.06)}
-    .call-icon{width:96px;height:72px;background:#eaf4ff;border-radius:12px;display:flex;align-items:center;justify-content:center;border:2px solid rgba(10,132,255,0.06)}
-    .call-icon svg{width:56px;height:56px;fill:#88bfff;opacity:0.95}
-    h2{margin:18px 0 6px;font-size:20px;text-align:center;color:#0b294d}
-    .desc{color:var(--soft);text-align:center;max-width:320px;margin:0 auto 12px;line-height:1.4}
-    .dots{display:flex;gap:8px;margin:8px 0 20px}
-    .dot{width:8px;height:8px;border-radius:50%;background:#dfe7ef;box-shadow:none}
-    .dot.active{background:var(--primary)}
-    /* form area */
-    .card{width:100%;max-width:460px;margin-top:6px;display:flex;flex-direction:column;align-items:stretch}
-    .btn-primary{
+    html,body{
+      height:100%;
+      margin:0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background:var(--bg);
+      color:#112;
+      -webkit-font-smoothing:antialiased;
+      -webkit-text-size-adjust:100%;
+    }
+    /* Safe area for iPhone notch and home indicator */
+    .page {
+      min-height:100vh;
+      padding:28px 20px;
+      box-sizing:border-box;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:flex-start;
+      padding-top: calc(env(safe-area-inset-top) + 24px);
+      padding-bottom: calc(env(safe-area-inset-bottom) + 20px);
+    }
+
+    .icon-wrap{
+      width:120px;
+      height:120px;
+      border-radius:22px;
+      background:linear-gradient(180deg,#fff,#f3f9ff);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      box-shadow:0 20px 40px rgba(15,30,60,0.06);
+      margin-top:34px;
+    }
+    .icon-img{
+      width:96px;height:96px;border-radius:18px;
+      background-image:url('https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png');
+      background-size:cover;background-position:center;
+      box-shadow:0 10px 20px rgba(10,40,120,0.06);
+    }
+
+    .title{
+      margin-top:18px;
+      font-size:24px;
+      font-weight:700;
+      color:#10315a;
+    }
+    .lead{
+      margin-top:10px;
+      max-width:640px;
+      text-align:center;
+      color:var(--muted);
+      line-height:1.45;
+      padding:0 10px;
+    }
+
+    .card {
+      margin-top:20px;
+      width:100%;
+      max-width:560px;
+      background:var(--card);
+      border-radius:14px;
+      padding:16px;
+      box-shadow:0 10px 30px rgba(12,30,60,0.06);
+    }
+    .card ul{margin:0;padding-left:18px;color:var(--muted);line-height:1.6}
+    .btn {
+      display:block;
+      width:220px;
+      max-width:90%;
+      margin:20px auto 0;
+      padding:12px 18px;
+      border-radius:14px;
+      border:0;
       background:var(--primary);
       color:#fff;
-      border-radius:36px;
-      padding:14px 18px;
-      border:0;
-      font-size:18px;
       font-weight:700;
-      box-shadow:0 6px 18px rgba(10,132,255,0.16);
-      cursor:pointer;
-      width:100%;
-      margin-top:22px;
+      font-size:16px;
+      box-shadow:0 8px 22px rgba(10,132,255,0.16);
     }
-    .btn-secondary{
-      background:#eef2f4;
-      color:#0f1720;
-      border-radius:36px;
-      padding:14px 18px;
-      border:0;
-      font-size:18px;
-      font-weight:700;
-      cursor:pointer;
-      width:100%;
-      margin-top:12px;
+
+    /* small demo styles */
+    .spacer{height:12px}
+    /* make UI look like native modal area when launched as standalone */
+    @media (min-width:700px){
+      .page{padding-top:40px}
+      .icon-wrap{width:140px;height:140px}
+      .icon-img{width:110px;height:110px}
+      .title{font-size:28px}
     }
-    .input{
-      margin-top:22px;
-      display:flex;
-      gap:10px;
-      align-items:center;
-      padding:12px 14px;
-      border-radius:14px;
-      background:#fff;
-      border:1px solid rgba(10,20,50,0.06);
-      box-shadow:0 3px 10px rgba(9,30,66,0.03) inset;
-    }
-    .input input{
-      border:0;outline:0;font-size:16px;background:transparent;width:100%;
-    }
-    .small{font-size:13px;color:var(--soft);text-align:center;margin-top:10px}
-    /* modal */
-    .modal-back{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.32);z-index:999}
-    .modal{background:#fff;padding:18px;border-radius:12px;min-width:260px;box-shadow:0 10px 30px rgba(0,0,0,0.18);text-align:center}
-    .modal h3{margin:8px 0 6px}
-    .modal p{margin:0 0 12px;color:var(--soft)}
-    .modal button{background:var(--primary);color:#fff;padding:8px 12px;border-radius:10px;border:0;font-weight:700;cursor:pointer}
-    /* footer spacing for iPhone home indicator */
-    .spacer{height:24px}
-    /* responsive */
-    @media(min-width:700px){
-      .container{padding:40px}
-      .logo{font-size:72px}
-    }
+
+    /* Prevent selection highlight in PWA */
+    * { -webkit-user-select: none; -ms-user-select: none; user-select: none; }
+    input, button { -webkit-user-select: text; user-select: text; }
   </style>
 </head>
 <body>
-  <div class="lang">Tiếng Việt ▾</div>
-
-  <div class="container" role="main">
-    <div class="logo" aria-hidden="true">Zalo</div>
-
-    <div class="hero" aria-hidden="false">
-      <div class="illu" role="img" aria-label="illustration">
-        <div class="illu-inner">
-          <div class="call-icon" aria-hidden="true">
-            <!-- simple phone/video icon svg -->
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <path d="M6.6 10.8c1.9 3.5 5 6.6 8.5 8.5l1.9-1.9c.3-.3.7-.4 1.1-.3 1.2.3 2.6.5 4 .5.6 0 1 .5 1 1v3.2c0 .6-.4 1-1 1C9.3 22 2 14.7 2 5.9 2 5.3 2.4 4.9 3 4.9H6.2c.6 0 1 .4 1 1 0 1.4.2 2.8.5 4 .1.4 0 .8-.3 1.1L6.6 10.8z" transform="translate(0 -2)" />
-            </svg>
-          </div>
-        </div>
-      </div>
-
-      <h2>Gọi video ổn định</h2>
-      <p class="desc">Trò chuyện thật đã với hình ảnh sắc nét, tiếng chất, âm chuẩn dưới mọi điều kiện.</p>
-
-      <div class="dots" aria-hidden="true">
-        <div class="dot active"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-      </div>
+  <div class="page" id="page">
+    <div class="icon-wrap" aria-hidden="true">
+      <div class="icon-img" role="img" aria-label="Zalo 2 icon"></div>
     </div>
 
-    <div class="card" aria-hidden="false">
-      <!-- Fake login form (local only) -->
-      <form id="loginForm" onsubmit="return false;" autocomplete="off">
-        <div class="input" style="margin-top:6px">
-          <input id="phone" name="phone" type="text" inputmode="numeric" pattern="[0-9]*" placeholder="Số điện thoại hoặc Email" aria-label="Số điện thoại hoặc Email">
-        </div>
-
-        <div class="input">
-          <input id="password" name="password" type="password" placeholder="Mật khẩu" aria-label="Mật khẩu">
-        </div>
-
-        <button id="loginBtn" class="btn-primary" type="submit">Đăng nhập</button>
-        <button id="createBtn" class="btn-secondary" type="button">Tạo tài khoản mới</button>
-
-        <div class="small">Bằng cách tiếp tục, bạn đồng ý với điều khoản và chính sách.</div>
-      </form>
+    <div class="title">Zalo 2</div>
+    <div class="lead">
+      Ứng dụng dạng web để thêm ra màn hình chính — perfect để troll bạn bè.
     </div>
+
+    <div class="card" role="region" aria-label="Hướng dẫn thêm">
+      <strong>Hướng dẫn nhanh:</strong>
+      <ul>
+        <li>Trên iPhone (Safari): bấm nút chia sẻ → "Thêm vào màn hình chính".</li>
+        <li>Trên Android (Chrome): bấm menu → "Thêm vào màn hình chính" hoặc chọn "Cài đặt" để thêm PWA.</li>
+      </ul>
+    </div>
+
+    <button id="openDemo" class="btn" aria-label="Mở demo">Mở (Demo)</button>
 
     <div class="spacer"></div>
   </div>
 
-  <!-- modal -->
-  <div class="modal-back" id="modalBack" role="dialog" aria-modal="true" aria-hidden="true">
-    <div class="modal" role="document">
-      <h3>Troll vui thôi 😀</h3>
-      <p>Đăng nhập ở đây chỉ là giả, không có chức năng đăng nhập thật.</p>
-      <button id="modalOk">OK</button>
-    </div>
-  </div>
-
+  <!-- optional: small script to create manifest + service worker to enable PWA standalone/fullscreen -->
   <script>
     (function(){
-      // manifest dynamic (so Chrome treats as installable)
-      const icon = "https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png";
+      // Icon URL (your provided icon)
+      const ICON = "https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png";
+
+      // Create a dynamic manifest with display: "fullscreen" so when installed it hides toolbars
       const manifest = {
         name: "Zalo 2",
         short_name: "Zalo2",
         start_url: ".",
-        display: "standalone",
+        display: "fullscreen",  // <-- key: fullscreen for full-bleed app
         background_color: "#ffffff",
         theme_color: "#ffffff",
+        orientation: "portrait",
         icons: [
-          { src: icon, sizes: "192x192", type: "image/png" },
-          { src: icon, sizes: "512x512", type: "image/png" }
+          { src: ICON, sizes: "192x192", type: "image/png" },
+          { src: ICON, sizes: "512x512", type: "image/png" }
         ]
       };
+
       const manifestBlob = new Blob([JSON.stringify(manifest)], { type: "application/json" });
       const manifestURL = URL.createObjectURL(manifestBlob);
       const link = document.createElement('link');
@@ -176,68 +174,106 @@
       link.href = manifestURL;
       document.head.appendChild(link);
 
-      // minimal service worker to make PWA installable
+      // Minimal service worker so Chrome treats page as installable PWA
       if ('serviceWorker' in navigator) {
         const swCode = `
           self.addEventListener('install', e => self.skipWaiting());
           self.addEventListener('activate', e => e.waitUntil(self.clients.claim()));
           self.addEventListener('fetch', e => {
-            // noop; we don't cache intentionally
+            // no-op fetch handler
           });
         `;
         const swBlob = new Blob([swCode], { type: 'application/javascript' });
         const swURL = URL.createObjectURL(swBlob);
-        navigator.serviceWorker.register(swURL).catch(e => {
-          console.warn('SW register failed', e);
+        navigator.serviceWorker.register(swURL).catch(function(err){
+          // ignore registration failures (still works on many browsers)
+          console.warn('SW regist failed', err);
         });
       }
 
-      // UI handlers
-      const modalBack = document.getElementById('modalBack');
-      const modalOk = document.getElementById('modalOk');
-      const loginBtn = document.getElementById('loginBtn');
-      const createBtn = document.getElementById('createBtn');
+      // Demo open: show a fake login page (kept simple)
+      document.getElementById('openDemo').addEventListener('click', function(){
+        // navigate to a simple internal demo page that looks like the login screen
+        // build demo markup dynamically so this file remains standalone
+        const html = `
+          <!doctype html>
+          <html lang="vi">
+          <head>
+            <meta charset="utf-8"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
+            <title>Zalo 2 - Demo</title>
+            <style>
+              body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;background:#fff;color:#10243a;min-height:100vh;padding:calc(env(safe-area-inset-top) + 18px) 18px calc(env(safe-area-inset-bottom) + 18px);box-sizing:border-box}
+              .wrap{max-width:560px;margin:0 auto;text-align:center}
+              .logo{background-image:url('${ICON}');width:120px;height:120px;border-radius:22px;margin:44px auto;background-size:cover;background-position:center;box-shadow:0 30px 60px rgba(6,24,54,0.08)}
+              h1{margin:8px 0 6px;font-size:22px}
+              p{color:#6b7785;max-width:520px;margin:0 auto 12px}
+              .dot-row{display:flex;gap:8px;justify-content:center;margin:16px 0}
+              .dot{width:8px;height:8px;border-radius:50%;background:#e6edf6}
+              .dot.active{background:${"#0a84ff"}}
+              .input{margin:14px 0;padding:12px;border-radius:12px;border:1px solid rgba(10,20,40,0.06);display:flex;align-items:center}
+              .input input{border:0;outline:0;width:100%;font-size:16px}
+              .btn{display:block;width:100%;padding:14px;border-radius:30px;border:0;background:${"#0a84ff"};color:#fff;font-weight:700;margin-top:12px}
+              .btn-secondary{background:#eef3f8;color:#081827}
+              .note{color:#7b8696;font-size:13px;margin-top:10px}
+            </style>
+          </head>
+          <body>
+            <div class="wrap">
+              <div class="logo" aria-hidden="true"></div>
+              <h1>Zalo</h1>
+              <p>Gọi video ổn định — Trò chuyện thật đã với hình ảnh sắc nét, tiếng chất.</p>
+              <div class="dot-row"><div class="dot active"></div><div class="dot"></div><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>
 
-      function showTrollModal(){
-        modalBack.style.display = 'flex';
-        modalBack.setAttribute('aria-hidden','false');
+              <form id="f" style="margin-top:18px">
+                <div class="input"><input id="phone" placeholder="Số điện thoại hoặc Email" inputmode="numeric" pattern="[0-9]*"></div>
+                <div class="input"><input id="pw" type="password" placeholder="Mật khẩu"></div>
+                <button class="btn" type="button" id="loginBtn">Đăng nhập</button>
+                <button class="btn btn-secondary" type="button" id="createBtn">Tạo tài khoản mới</button>
+              </form>
+
+              <div class="note">Mở từ Màn hình chính sẽ ẩn thanh trình duyệt — giống ứng dụng thật.</div>
+            </div>
+
+            <script>
+              function showAlert(){
+                // simple toast-style alert
+                const el = document.createElement('div');
+                el.textContent = 'Troll vui thôi 😀';
+                el.style.position = 'fixed';
+                el.style.left = '50%';
+                el.style.top = '50%';
+                el.style.transform = 'translate(-50%,-50%)';
+                el.style.background = '#fff';
+                el.style.padding = '14px 18px';
+                el.style.borderRadius = '12px';
+                el.style.boxShadow = '0 20px 40px rgba(2,24,74,0.16)';
+                el.style.zIndex = 9999;
+                document.body.appendChild(el);
+                setTimeout(()=>el.remove(),1600);
+              }
+              document.getElementById('loginBtn').addEventListener('click', showAlert);
+              document.getElementById('createBtn').addEventListener('click', showAlert);
+            </script>
+          </body>
+          </html>
+        `;
+        // open demo in same tab
+        const w = window.open('', '_self');
+        w.document.write(html);
+        w.document.close();
+      });
+
+      // Optional: if page is launched in standalone/fullscreen, we can remove focus outlines, etc.
+      function isStandalone() {
+        return (window.matchMedia && window.matchMedia('(display-mode: standalone)').matches)
+          || window.navigator.standalone === true
+          || document.referrer.startsWith('android-app://');
       }
-      function hideTrollModal(){
-        modalBack.style.display = 'none';
-        modalBack.setAttribute('aria-hidden','true');
+      if (isStandalone()) {
+        // if needed, adjust UI for standalone mode
+        document.documentElement.style.background = "#fff";
       }
-
-      loginBtn.addEventListener('click', function(e){
-        // do not send data anywhere: local only
-        // you can still read values locally if you want but we won't use them
-        // show troll message
-        showTrollModal();
-      });
-
-      createBtn.addEventListener('click', function(){
-        // behave like create screen — but just show the troll modal as well
-        showTrollModal();
-      });
-
-      modalOk.addEventListener('click', hideTrollModal);
-
-      // Accessibility: close modal on backdrop click
-      modalBack.addEventListener('click', function(ev){
-        if (ev.target === modalBack) hideTrollModal();
-      });
-
-      // prevent actual form submission via enter key
-      const loginForm = document.getElementById('loginForm');
-      loginForm.addEventListener('submit', function(ev){
-        ev.preventDefault();
-        showTrollModal();
-      });
-
-      // optional: show small toast instead of modal on quick press (for UX)
-      // but keeping modal to be obvious
-
-      // IMPORTANT: This page runs entirely in the browser. No data is transmitted to any server.
-      // If you later want to log inputs locally (for demo), add code here — but keep privacy in mind.
     })();
   </script>
 </body>
