--- a/index.html
+++ b/index.html
@@ -5,159 +5,147 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Zalo 2</title>
 
-  <!-- Icons -->
+  <!-- Icon -->
   <link rel="icon" href="https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png" />
   <link rel="apple-touch-icon" href="https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png" />
 
-  <!-- PWA / Fullscreen settings -->
-  <!-- iOS -->
+  <!-- PWA / fullscreen settings -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <!-- black-translucent makes status area overlay; when added to home screen it gives a cleaner look.
-       If you prefer a solid bar color, use "default" or "black". -->
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="Zalo 2" />
-  <!-- Android / Chrome -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="theme-color" content="#ffffff" />
 
   <style>
-    :root{
-      --bg:#f7f9fb;
-      --card:#ffffff;
-      --primary:#0a84ff;
-      --muted:#6b7785;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #fff;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      overflow: hidden;
+      -webkit-font-smoothing: antialiased;
     }
-    html,body{
-      height:100%;
-      margin:0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background:var(--bg);
-      color:#112;
-      -webkit-font-smoothing:antialiased;
-      -webkit-text-size-adjust:100%;
+    .top-bar {
+      width: 100%;
+      text-align: right;
+      padding: calc(env(safe-area-inset-top) + 10px) 16px 0;
     }
-    /* Safe area for iPhone notch and home indicator */
-    .page {
-      min-height:100vh;
-      padding:28px 20px;
-      box-sizing:border-box;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:flex-start;
-      padding-top: calc(env(safe-area-inset-top) + 24px);
-      padding-bottom: calc(env(safe-area-inset-bottom) + 20px);
+    .lang-btn {
+      border: 1px solid #ccc;
+      border-radius: 20px;
+      padding: 4px 12px;
+      font-size: 15px;
+      color: #333;
+      background: #fff;
+      outline: none;
     }
-
-    .icon-wrap{
-      width:120px;
-      height:120px;
-      border-radius:22px;
-      background:linear-gradient(180deg,#fff,#f3f9ff);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      box-shadow:0 20px 40px rgba(15,30,60,0.06);
-      margin-top:34px;
+    .logo {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
-    .icon-img{
-      width:96px;height:96px;border-radius:18px;
-      background-image:url('https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png');
-      background-size:cover;background-position:center;
-      box-shadow:0 10px 20px rgba(10,40,120,0.06);
+    .logo-text {
+      font-size: 48px;
+      font-weight: 700;
+      color: #0068ff;
+      margin-bottom: 30px;
     }
-
-    .title{
-      margin-top:18px;
-      font-size:24px;
-      font-weight:700;
-      color:#10315a;
+    .dots {
+      display: flex;
+      gap: 8px;
+      margin-bottom: 40px;
     }
-    .lead{
-      margin-top:10px;
-      max-width:640px;
-      text-align:center;
-      color:var(--muted);
-      line-height:1.45;
-      padding:0 10px;
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #ddd;
     }
-
-    .card {
-      margin-top:20px;
-      width:100%;
-      max-width:560px;
-      background:var(--card);
-      border-radius:14px;
-      padding:16px;
-      box-shadow:0 10px 30px rgba(12,30,60,0.06);
+    .dot.active {
+      background: #0068ff;
     }
-    .card ul{margin:0;padding-left:18px;color:var(--muted);line-height:1.6}
+    .bottom {
+      width: 100%;
+      padding: 0 20px calc(env(safe-area-inset-bottom) + 30px);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
     .btn {
-      display:block;
-      width:220px;
-      max-width:90%;
-      margin:20px auto 0;
-      padding:12px 18px;
-      border-radius:14px;
-      border:0;
-      background:var(--primary);
-      color:#fff;
-      font-weight:700;
-      font-size:16px;
-      box-shadow:0 8px 22px rgba(10,132,255,0.16);
+      width: 100%;
+      max-width: 360px;
+      height: 46px;
+      border: none;
+      border-radius: 23px;
+      font-size: 17px;
+      font-weight: 600;
+      cursor: pointer;
     }
-
-    /* small demo styles */
-    .spacer{height:12px}
-    /* make UI look like native modal area when launched as standalone */
-    @media (min-width:700px){
-      .page{padding-top:40px}
-      .icon-wrap{width:140px;height:140px}
-      .icon-img{width:110px;height:110px}
-      .title{font-size:28px}
+    .btn-login {
+      background: #0068ff;
+      color: #fff;
     }
-
-    /* Prevent selection highlight in PWA */
-    * { -webkit-user-select: none; -ms-user-select: none; user-select: none; }
-    input, button { -webkit-user-select: text; user-select: text; }
+    .btn-create {
+      background: #e9ecf1;
+      color: #000;
+    }
   </style>
 </head>
 <body>
-  <div class="page" id="page">
-    <div class="icon-wrap" aria-hidden="true">
-      <div class="icon-img" role="img" aria-label="Zalo 2 icon"></div>
-    </div>
-
-    <div class="title">Zalo 2</div>
-    <div class="lead">
-      Ứng dụng dạng web để thêm ra màn hình chính — perfect để troll bạn bè.
-    </div>
-
-    <div class="card" role="region" aria-label="Hướng dẫn thêm">
-      <strong>Hướng dẫn nhanh:</strong>
-      <ul>
-        <li>Trên iPhone (Safari): bấm nút chia sẻ → "Thêm vào màn hình chính".</li>
-        <li>Trên Android (Chrome): bấm menu → "Thêm vào màn hình chính" hoặc chọn "Cài đặt" để thêm PWA.</li>
-      </ul>
-    </div>
-
-    <button id="openDemo" class="btn" aria-label="Mở demo">Mở (Demo)</button>
-
-    <div class="spacer"></div>
+  <div class="top-bar">
+    <button class="lang-btn">Tiếng Việt ▾</button>
   </div>
 
-  <!-- optional: small script to create manifest + service worker to enable PWA standalone/fullscreen -->
-  <script>
-    (function(){
-      // Icon URL (your provided icon)
-      const ICON = "https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png";
+  <div class="logo">
+    <div class="logo-text">Zalo</div>
+    <div class="dots">
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot active"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+    </div>
+  </div>
 
-      // Create a dynamic manifest with display: "fullscreen" so when installed it hides toolbars
+  <div class="bottom">
+    <button class="btn btn-login" onclick="troll()">Đăng nhập</button>
+    <button class="btn btn-create" onclick="troll()">Tạo tài khoản mới</button>
+  </div>
+
+  <script>
+    // Hiển thị thông báo "Troll vui thôi 😀"
+    function troll() {
+      const el = document.createElement('div');
+      el.textContent = 'Troll vui thôi 😀';
+      el.style.position = 'fixed';
+      el.style.left = '50%';
+      el.style.top = '50%';
+      el.style.transform = 'translate(-50%, -50%)';
+      el.style.background = '#fff';
+      el.style.padding = '14px 18px';
+      el.style.borderRadius = '12px';
+      el.style.boxShadow = '0 20px 40px rgba(0,0,0,0.15)';
+      el.style.zIndex = 9999;
+      el.style.fontWeight = '600';
+      document.body.appendChild(el);
+      setTimeout(() => el.remove(), 1500);
+    }
+
+    // tạo manifest để thêm ra màn hình chính
+    (function(){
+      const ICON = "https://github.com/nhut990/files/releases/download/V1.0-icon/zalo.png";
       const manifest = {
         name: "Zalo 2",
         short_name: "Zalo2",
         start_url: ".",
-        display: "fullscreen",  // <-- key: fullscreen for full-bleed app
+        display: "fullscreen",
         background_color: "#ffffff",
         theme_color: "#ffffff",
         orientation: "portrait",
@@ -166,113 +154,15 @@
           { src: ICON, sizes: "512x512", type: "image/png" }
         ]
       };
-
-      const manifestBlob = new Blob([JSON.stringify(manifest)], { type: "application/json" });
-      const manifestURL = URL.createObjectURL(manifestBlob);
-      const link = document.createElement('link');
-      link.rel = 'manifest';
-      link.href = manifestURL;
+      const blob = new Blob([JSON.stringify(manifest)], { type: "application/json" });
+      const link = document.createElement("link");
+      link.rel = "manifest";
+      link.href = URL.createObjectURL(blob);
       document.head.appendChild(link);
 
-      // Minimal service worker so Chrome treats page as installable PWA
-      if ('serviceWorker' in navigator) {
-        const swCode = `
-          self.addEventListener('install', e => self.skipWaiting());
-          self.addEventListener('activate', e => e.waitUntil(self.clients.claim()));
-          self.addEventListener('fetch', e => {
-            // no-op fetch handler
-          });
-        `;
-        const swBlob = new Blob([swCode], { type: 'application/javascript' });
-        const swURL = URL.createObjectURL(swBlob);
-        navigator.serviceWorker.register(swURL).catch(function(err){
-          // ignore registration failures (still works on many browsers)
-          console.warn('SW regist failed', err);
-        });
-      }
-
-      // Demo open: show a fake login page (kept simple)
-      document.getElementById('openDemo').addEventListener('click', function(){
-        // navigate to a simple internal demo page that looks like the login screen
-        // build demo markup dynamically so this file remains standalone
-        const html = `
-          <!doctype html>
-          <html lang="vi">
-          <head>
-            <meta charset="utf-8"/>
-            <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
-            <title>Zalo 2 - Demo</title>
-            <style>
-              body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;background:#fff;color:#10243a;min-height:100vh;padding:calc(env(safe-area-inset-top) + 18px) 18px calc(env(safe-area-inset-bottom) + 18px);box-sizing:border-box}
-              .wrap{max-width:560px;margin:0 auto;text-align:center}
-              .logo{background-image:url('${ICON}');width:120px;height:120px;border-radius:22px;margin:44px auto;background-size:cover;background-position:center;box-shadow:0 30px 60px rgba(6,24,54,0.08)}
-              h1{margin:8px 0 6px;font-size:22px}
-              p{color:#6b7785;max-width:520px;margin:0 auto 12px}
-              .dot-row{display:flex;gap:8px;justify-content:center;margin:16px 0}
-              .dot{width:8px;height:8px;border-radius:50%;background:#e6edf6}
-              .dot.active{background:${"#0a84ff"}}
-              .input{margin:14px 0;padding:12px;border-radius:12px;border:1px solid rgba(10,20,40,0.06);display:flex;align-items:center}
-              .input input{border:0;outline:0;width:100%;font-size:16px}
-              .btn{display:block;width:100%;padding:14px;border-radius:30px;border:0;background:${"#0a84ff"};color:#fff;font-weight:700;margin-top:12px}
-              .btn-secondary{background:#eef3f8;color:#081827}
-              .note{color:#7b8696;font-size:13px;margin-top:10px}
-            </style>
-          </head>
-          <body>
-            <div class="wrap">
-              <div class="logo" aria-hidden="true"></div>
-              <h1>Zalo</h1>
-              <p>Gọi video ổn định — Trò chuyện thật đã với hình ảnh sắc nét, tiếng chất.</p>
-              <div class="dot-row"><div class="dot active"></div><div class="dot"></div><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>
-
-              <form id="f" style="margin-top:18px">
-                <div class="input"><input id="phone" placeholder="Số điện thoại hoặc Email" inputmode="numeric" pattern="[0-9]*"></div>
-                <div class="input"><input id="pw" type="password" placeholder="Mật khẩu"></div>
-                <button class="btn" type="button" id="loginBtn">Đăng nhập</button>
-                <button class="btn btn-secondary" type="button" id="createBtn">Tạo tài khoản mới</button>
-              </form>
-
-              <div class="note">Mở từ Màn hình chính sẽ ẩn thanh trình duyệt — giống ứng dụng thật.</div>
-            </div>
-
-            <script>
-              function showAlert(){
-                // simple toast-style alert
-                const el = document.createElement('div');
-                el.textContent = 'Troll vui thôi 😀';
-                el.style.position = 'fixed';
-                el.style.left = '50%';
-                el.style.top = '50%';
-                el.style.transform = 'translate(-50%,-50%)';
-                el.style.background = '#fff';
-                el.style.padding = '14px 18px';
-                el.style.borderRadius = '12px';
-                el.style.boxShadow = '0 20px 40px rgba(2,24,74,0.16)';
-                el.style.zIndex = 9999;
-                document.body.appendChild(el);
-                setTimeout(()=>el.remove(),1600);
-              }
-              document.getElementById('loginBtn').addEventListener('click', showAlert);
-              document.getElementById('createBtn').addEventListener('click', showAlert);
-            </script>
-          </body>
-          </html>
-        `;
-        // open demo in same tab
-        const w = window.open('', '_self');
-        w.document.write(html);
-        w.document.close();
-      });
-
-      // Optional: if page is launched in standalone/fullscreen, we can remove focus outlines, etc.
-      function isStandalone() {
-        return (window.matchMedia && window.matchMedia('(display-mode: standalone)').matches)
-          || window.navigator.standalone === true
-          || document.referrer.startsWith('android-app://');
-      }
-      if (isStandalone()) {
-        // if needed, adjust UI for standalone mode
-        document.documentElement.style.background = "#fff";
+      if ("serviceWorker" in navigator) {
+        const sw = new Blob(["self.addEventListener('install',e=>self.skipWaiting());"], {type:"application/javascript"});
+        navigator.serviceWorker.register(URL.createObjectURL(sw)).catch(()=>{});
       }
     })();
   </script>
